# image-feature-extraction

./: .gitignore  CMakeLists.txt  README.md
include/ife/Filters/: Hessian3DImageFilter.h  Hessian3DImageFilter.hxx  ImageToEmphysemaFeaturesFilter.h  ImageToEmphysemaFeaturesFilter.hxx  NormalizedGaussianConvolutionImageFilter.h  NormalizedGaussianConvolutionImageFilter.hxx
include/ife/IO/: HR2Reader.h  IO.h  OctaveReader.h  OctaveReader.hxx  ROIReader.h  ROIReader.hxx
include/ife/Numerics/: EigenvalueFeaturesFunctor.h  Symmetric3x3EigenvalueSolver.h
include/ife/ROI/: DenseROIGenerator.h  DenseROIGenerator.hxx  RegionOfInterestGenerator.h  RegionOfInterestGenerator.hxx
include/ife/Statistics/: DenseHistogram.h  DetermineEdgesForEqualizedHistogram.h  ExpectedDistanceFromCenterToInterestPoint.h
include/ife/Util/: InflateStream.h  Path.h  String.h
src/: CMakeLists.txt
src/IO/: CMakeLists.txt  HR2Reader.cxx  IO.cxx
src/Util/: CMakeLists.txt  String.cxx
test/: CMakeLists.txt  DenseHistogramTest.cxx  DetermineEdgesForEqualizedHistogramTest.cxx  Symmetric3x3EigenvalueSolverTest.cxx
tools/: CMakeLists.txt  CalculateExpectedDistanceFromCenterToInterestPoints.cxx  ConvertDICOM.cxx  ConvertFromOctave.cxx  ConvertHR2.cxx  DetermineHistogramBinEdges_MultiScaleEigenvalueFeatures.cxx  ExtractBoundingBox.cxx  ExtractFeatures.cxx  ExtractLabels.cxx  ExtractMaskedRegion.cxx  ExtractSlices.cxx  ExtractWindow.cxx  FiniteDifference_GradientFeatures.cxx  FiniteDifference_HessianFeatures.cxx  GenerateROIs.cxx  GenerateROIsManyRegions.cxx  ImageBrowser.cxx  MakeBag.cxx  MakeBagDense.cxx  MakeBagOnlyIntensity.cxx  MakeBaggedDataset.cxx  MaskedImageFilter.cxx  MaskedNormalizedConvolution.cxx  PadImage.cxx  Resample.cxx  SampleROIs.cxx
